crates/plotnik-lib/tests/02-parser/recovery_incomplete/bare_capture_at_eof.txt
@
------------------ DIAGNOSTICS -------------------
error: expected a capture name after `@`
 --> query.ptk:1:1
  |
1 | @
  | ^
  |
help: captures attach to the pattern before them: `(node) @name`
